# OpenPit3D

./: .gitignore  AppState.h  BlockModel.cpp  BlockModel.h  CMakeLists.txt  Camera.cpp  Camera.h  DrillholeDatabase.cpp  DrillholeDatabase.h  LGOptimizer.cpp  LGOptimizer.h  MeshModel.cpp  MeshModel.h  PitGenerator.cpp  PitGenerator.h  Renderer.cpp  Renderer.h  SceneController.cpp  SceneController.h  Shader.cpp  Shader.h  Types.h  UI.cpp  UI.h  build.yml  collars.txt  lithologies.txt  main.cpp  samples.txt  surveys.txt
.github/workflows/: build.yml
src/: AppState.h  BlockModel.cpp  BlockModel.h  Camera.cpp  Camera.h  CashFlowAnalysis.cpp  CashFlowAnalysis.h  LGOptimizer.cpp  LGOptimizer.h  MeshModel.cpp  MeshModel.h  PitGenerator.cpp  PitGenerator.h  PitScheduler.cpp  PitScheduler.h  Renderer.cpp  Renderer.h  SceneController.cpp  SceneController.h  Shader.cpp  Shader.h  TextDrillholeData.cpp  TextDrillholeData.h  Types.h  UI.cpp  UI.h  main.cpp
